8_autoscaling/test_app/service-autoscaling.yaml
apiVersion: v1
kind: Service
metadata:
  name: autoscaling-service
  namespace: autoscaling-namespace
  labels:
    app: autoscaling-deployment
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: autoscaling-deployment
