8_autoscaling/test_app/ingress-autoscaling.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: autoscaling-ingress
  namespace: autoscaling-namespace
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    # old certmanager integration
    certmanager.k8s.io/cluster-issuer: "letsencrypt-practice"
    # new certmanager integration
    cert-manager.io/cluster-issuer: "letsencrypt-practice"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  tls:
    - hosts: 
      - autoscaling.mykubernetes.guru
      secretName: ssl-letsencrypt
  rules:
  - host: 'autoscaling.mykubernetes.guru'
    http:
      paths:
      - path: /
        backend:
          serviceName: autoscaling-service
          servicePort: 80
